Bug 366612 - (Desktop Effect) Mouse Click Animation does not recognize clicks correctly
Summary: (Desktop Effect) Mouse Click Animation does not recognize clicks correctly
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.7.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2406
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-10 20:56 UTC by jure.slak
Modified: 2016-08-15 14:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.4
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jure.slak 2016-08-10 20:56:23 UTC
After enabling Mouse Click Animation desktop effect I noticed that it does not recognize clicks when the mouse is still. If I do not move my mouse and click any button, the click go unanimated.
However, it I click and hold and move by a few fixels, the click gets animated, as does the click when the button is released. Most of my clicks go unanimeted, which defeats the purpose of this feature.

Reproducible: Always

Steps to Reproduce:
1. Enable Mouse Click Animation Desktop Effect
2. Click and release left button while not moving the mouse 
3. Observe the lack of animation

Actual Results:  
Whatever was below the mouse recognizes the click, but no animation appears.

Expected Results:  
Click animation (red circles) should appear.
Comment 1 Martin Flöser 2016-08-11 09:41:19 UTC
at least on Wayland it works correctly
Comment 2 Martin Flöser 2016-08-11 09:43:15 UTC
can reproduce on X11
Comment 3 Martin Flöser 2016-08-11 09:56:09 UTC
Seems to be a regression due to change to xinput2 for mouse polling
Comment 4 Martin Flöser 2016-08-11 11:00:04 UTC
Possible fix at https://phabricator.kde.org/D2406
Comment 5 Martin Flöser 2016-08-15 14:07:15 UTC
Git commit 71c996fe33d0b4032c0e71293a1c283d69b9c2f8 by Martin Gräßlin.
Committed on 15/08/2016 at 14:06.
Pushed by graesslin into branch 'Plasma/5.7'.

Select also raw button press/release in XInput2 based polling

Summary:
The mouse polling is also used to detect mouse button press/release
events. This is used e.g. by the MouseClickEffect. The XInput2 filter
only selected for Raw Motion events which means mouse button events
are missed in case it's not combined with a motion.

This change makes the input filter also select for raw button press
and release events. To support this the X11EventFilter needed to
be adjusted to support multiple generic event types to filter for.
FIXED-IN: 5.7.4

Reviewers: #kwin, #plasma

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D2406

M  +1    -1    autotests/test_xrandr_screens.cpp
M  +3    -1    cursor.cpp
M  +1    -1    events.cpp
M  +6    -1    x11eventfilter.cpp
M  +6    -3    x11eventfilter.h

http://commits.kde.org/kwin/71c996fe33d0b4032c0e71293a1c283d69b9c2f8